--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,11 @@
     "api/bot.js": {
       "runtime": "nodejs20.x"
     }
-  }
+  },
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/bot.js"
+    }
+  ]
 }
